# agent-loop-detector

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_loop_detector/: __init__.py  core.py
src/agent_loop_detector.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  test_agent_loop_detector.py
