[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-loop-detector"
version = "0.1.0"
description = "Detect agent tool-call loops — same tool+args repeated N times in a sliding window. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["agents", "llm", "tools", "loop-detection", "safety"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-loop-detector"

[tool.setuptools.packages.find]
where = ["src"]
